<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="tm_account_tmAccountLogin">淘米账号登录</string>
    <string name="tm_account_account">账号</string>
    <string name="tm_account_accountInputTip">米米号、手机号、邮箱或自定义</string>
    <string name="tm_account_reg_accountTip">6–20个字母、数字或下划线</string>
    <string name="tm_account_reg_pwdTip">6–16个字符组成</string>
    <string name="tm_account_pwd">密码</string>
    <string name="tm_account_pwdInputTip">输入密码</string>
    <string name="tm_account_rememberPwd">记住密码</string>
    <string name="tm_account_forgetPwd">忘记密码</string>
    <string name="tm_account_regAccount">注册账号</string>
    <string name="tm_account_login">登录</string>
    <string name="tm_account_accountReg">自定义账号注册</string>
    <string name="tm_account_accountSpace"><html>密码</html></string>
    <string name="tm_account_pwdSpace">密码</string>
    <string name="tm_account_confirmPwd">确认密码</string>
    <string name="tm_account_loginAccount">登录已有账号</string>
    <string name="tm_account_reg">注册</string>
    <string name="tm_account_tmUser">淘米用户</string>
    <string name="tm_account_welcomeYou">,欢迎你</string>
    <string name="tm_account_pwdAgain">再次输入密码</string>
    <string name="tm_account_loading">正在玩命登录中…</string>
    <string name="tm_account_contentDescription">image</string>
    <string name="app_name">战神联盟</string>
    <string name="XIAO_MI">xiaomi</string>
    <string name="GAME_4399">game4399</string>
    <string name="TAOMEE">android</string>
</resources>
