<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_gravity="center" android:background="@drawable/tm_account_bg" android:layout_width="365.0dip" android:layout_height="259.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_centerHorizontal="true">
        <ImageView android:id="@id/tm_account_title_image" android:layout_width="348.0dip" android:layout_height="31.0dip" android:src="@drawable/tm_title" android:scaleType="fitXY" android:layout_centerHorizontal="true" />
        <TextView android:textSize="20.0dip" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tm_account_tmAccountLogin" android:layout_centerInParent="true" />
    </RelativeLayout>
    <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="48.0dip" android:layout_centerHorizontal="true">
        <ImageView android:id="@id/imageView4" android:layout_width="307.0dip" android:layout_height="42.0dip" android:src="@drawable/tm_input" android:scaleType="fitXY" android:layout_centerHorizontal="true" />
        <TextView android:textSize="16.0dip" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="14.0dip" android:text="@string/tm_account_account" android:layout_centerVertical="true" />
        <EditText android:textSize="14.0sp" android:textColor="#ff000000" android:id="@id/tm_account_edittext" android:background="@null" android:layout_width="230.0dip" android:layout_height="wrap_content" android:layout_marginLeft="70.0dip" android:hint="@string/tm_account_accountInputTip" android:singleLine="true" android:layout_centerVertical="true" />
        <ImageView android:id="@id/tm_account_close_input" android:visibility="invisible" android:layout_width="16.0dip" android:layout_height="16.0dip" android:layout_marginRight="14.0dip" android:src="@drawable/tm_close_input" android:scaleType="fitXY" android:layout_alignRight="@id/imageView4" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="99.0dip" android:layout_centerHorizontal="true">
        <ImageView android:id="@id/imageView4" android:layout_width="307.0dip" android:layout_height="42.0dip" android:src="@drawable/tm_input" android:scaleType="fitXY" android:layout_centerHorizontal="true" />
        <TextView android:textSize="16.0dip" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="14.0dip" android:text="@string/tm_account_pwd" android:layout_centerVertical="true" />
        <EditText android:textSize="14.0sp" android:textColor="#ff000000" android:id="@id/tm_account_pwd_edittext" android:background="@null" android:layout_width="230.0dip" android:layout_height="wrap_content" android:layout_marginLeft="70.0dip" android:hint="@string/tm_account_pwdInputTip" android:password="true" android:singleLine="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:layout_width="307.0dip" android:layout_height="wrap_content" android:layout_marginTop="158.0dip" android:layout_centerHorizontal="true">
        <ImageView android:id="@id/tm_account_selected" android:layout_width="16.0dip" android:layout_height="16.0dip" android:src="@drawable/tm_btn_selected" android:scaleType="fitXY" android:layout_centerVertical="true" />
        <TextView android:textSize="15.0dip" android:textColor="#ff999999" android:id="@id/tm_account_selected_text" android:paddingLeft="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tm_account_rememberPwd" android:layout_toRightOf="@id/tm_account_selected" android:layout_centerVertical="true" />
        <TextView android:textSize="14.0dip" android:textColor="#ff0066cb" android:id="@id/tm_account_forget_pwd" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tm_account_forgetPwd" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:layout_width="307.0dip" android:layout_height="wrap_content" android:layout_marginTop="191.0dip" android:layout_centerHorizontal="true">
        <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true">
            <ImageView android:id="@id/tm_account_reg" android:layout_width="126.0dip" android:layout_height="43.0dip" android:src="@drawable/tm_left_btn_selector" android:scaleType="fitXY" />
            <TextView android:textSize="20.0dip" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tm_account_regAccount" android:layout_centerInParent="true" />
        </RelativeLayout>
        <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true">
            <ImageView android:id="@id/tm_account_login" android:layout_width="173.0dip" android:layout_height="43.0dip" android:src="@drawable/tm_right_btn_selector" android:scaleType="fitXY" />
            <TextView android:textSize="20.0dip" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tm_account_login" android:layout_centerInParent="true" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
