<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@android:color/transparent" android:layout_width="1000.0dip" android:layout_height="345.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/tm_account_switch" android:layout_width="215.0dip" android:layout_height="59.0dip" android:src="@drawable/tm_account_switch" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:contentDescription="@string/tm_account_contentDescription" />
    <RelativeLayout android:background="@drawable/tm_login_bg" android:layout_width="735.0dip" android:layout_height="208.0dip" android:layout_marginTop="78.0dip" android:layout_below="@id/tm_account_switch" android:layout_centerHorizontal="true">
        <ImageView android:id="@id/tm_account_logo" android:layout_width="94.0dip" android:layout_height="94.0dip" android:layout_marginLeft="90.0dip" android:src="@drawable/tm_logo" android:layout_centerVertical="true" android:contentDescription="@string/tm_account_contentDescription" />
        <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_toRightOf="@id/tm_account_logo" android:layout_centerVertical="true">
            <LinearLayout android:id="@id/tm_welcome_lt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true">
                <TextView android:textSize="30.0sp" android:textColor="#ff666666" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tm_account_tmUser" />
                <TextView android:textSize="30.0sp" android:textColor="#ff0067cb" android:id="@id/userNameTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <TextView android:textSize="30.0sp" android:textColor="#ff666666" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tm_account_welcomeYou" />
            </LinearLayout>
            <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_below="@id/tm_welcome_lt" android:layout_centerHorizontal="true">
                <ProgressBar android:id="@id/tm_loading_bar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminate="false" android:indeterminateDrawable="@anim/tm_account_loading" android:layout_centerVertical="true" />
                <TextView android:textSize="30.0sp" android:textColor="#ff666666" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/tm_account_loading" android:layout_toRightOf="@id/tm_loading_bar" android:layout_centerVertical="true" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
