<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_gravity="center" android:background="@drawable/tm_account_bg" android:layout_width="365.0dip" android:layout_height="259.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_centerHorizontal="true">
        <ImageView android:id="@id/tm_account_title_image" android:layout_width="348.0dip" android:layout_height="31.0dip" android:src="@drawable/tm_title" android:scaleType="fitXY" android:layout_centerHorizontal="true" />
        <TextView android:textSize="20.0dip" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tm_account_accountReg" android:layout_centerInParent="true" />
    </RelativeLayout>
    <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="48.0dip" android:layout_centerHorizontal="true">
        <ImageView android:id="@id/accountInputImageView" android:layout_width="307.0dip" android:layout_height="36.0dip" android:src="@drawable/tm_input" android:scaleType="fitXY" android:layout_centerHorizontal="true" />
        <TextView android:textSize="16.0dip" android:textColor="#ff000000" android:id="@id/accountTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="14.0dip" android:layout_centerVertical="true" />
        <EditText android:textSize="14.0sp" android:textColor="#ff000000" android:id="@id/username" android:background="@null" android:layout_width="210.0dip" android:layout_height="wrap_content" android:layout_marginLeft="90.0dip" android:hint="@string/tm_account_reg_accountTip" android:singleLine="true" android:layout_centerVertical="true" />
        <ImageView android:id="@id/tm_account_close_input" android:visibility="invisible" android:layout_width="16.0dip" android:layout_height="16.0dip" android:layout_marginRight="14.0dip" android:src="@drawable/tm_close_input" android:scaleType="fitXY" android:layout_alignRight="@id/accountInputImageView" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="93.0dip" android:layout_centerHorizontal="true">
        <ImageView android:layout_width="307.0dip" android:layout_height="36.0dip" android:src="@drawable/tm_input" android:scaleType="fitXY" android:layout_centerHorizontal="true" />
        <TextView android:textSize="16.0dip" android:textColor="#ff000000" android:id="@id/pwdTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="14.0dip" android:layout_centerVertical="true" />
        <EditText android:textSize="14.0sp" android:textColor="#ff000000" android:id="@id/pwd" android:background="@null" android:layout_width="210.0dip" android:layout_height="wrap_content" android:layout_marginLeft="90.0dip" android:hint="@string/tm_account_reg_pwdTip" android:password="true" android:singleLine="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="138.0dip" android:layout_centerHorizontal="true">
        <ImageView android:id="@id/imageView4" android:layout_width="307.0dip" android:layout_height="36.0dip" android:src="@drawable/tm_input" android:scaleType="fitXY" android:layout_centerHorizontal="true" />
        <TextView android:textSize="16.0dip" android:textColor="#ff000000" android:id="@id/confirmPwdTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="14.0dip" android:layout_centerVertical="true" />
        <EditText android:textSize="14.0sp" android:textColor="#ff000000" android:id="@id/confirmPwd" android:background="@null" android:layout_width="210.0dip" android:layout_height="wrap_content" android:layout_marginLeft="90.0dip" android:hint="@string/tm_account_pwdAgain" android:password="true" android:singleLine="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:layout_width="307.0dip" android:layout_height="wrap_content" android:layout_marginTop="191.0dip" android:layout_centerHorizontal="true">
        <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true">
            <ImageView android:id="@id/loginBtn" android:layout_width="126.0dip" android:layout_height="43.0dip" android:src="@drawable/tm_left_btn_selector" android:scaleType="fitXY" />
            <TextView android:textSize="16.0dip" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tm_account_loginAccount" android:layout_centerInParent="true" />
        </RelativeLayout>
        <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true">
            <ImageView android:id="@id/regBtn" android:layout_width="173.0dip" android:layout_height="43.0dip" android:src="@drawable/tm_right_btn_selector" android:scaleType="fitXY" />
            <TextView android:textSize="20.0dip" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tm_account_reg" android:layout_centerInParent="true" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
